# tasarch

./: .gitignore  .gitmodules  .travis.yml  CMakeLists-libretro-common.txt  CMakeLists.txt  README.md  azure-pipelines.yml  bitmask.hpp  build_release.sh  main.cpp  noarch.c
emulator/: Core.cpp  Core.hpp  Emulator.cpp  Emulator.h  InputManager.cpp  InputManager.hpp  SaveManager.cpp  SaveManager.hpp  Signals.h
gui/: EmulatorArea.cpp  EmulatorArea.hpp  EmulatorWindow.cpp  EmulatorWindow.h  KeybindingsWindow.cpp  KeybindingsWindow.h  TASArchApplication.cpp  TASArchApplication.h  TASMovieEditor.cpp  TASMovieEditor.hpp
movie/: TASMovie.cpp  TASMovie.hpp  TASMovieModel.cpp  TASMovieModel.hpp
resources/: app_menu.ui  keybindings_window.ui
xcode/: .gresource.xml  resources.c
